[package]
name = "ghfs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
libc = "0.2.180"
aes-gcm = "0.10.3"
hex = "0.4.3"
rpassword = "7.4.0"
sha2 = "0.11.0"
rand = "0.10.1"
